@@ -19,6 +19,8 @@ Features added
   described in documentation.
 * HTML breadcrumb items tag has class "nav-item" and "nav-item-N" (like
   nav-item-0, 1, 2...).
+* sphinx-quickstart now has `--use-make-mode` option for generating Makefile
+  that use sphinx make-mode.
 
 Bugs fixed
 ----------
